bugfix animation scrollbarX

--- a/portfolio/src/app/main-content/header/header.component.scss
+++ b/portfolio/src/app/main-content/header/header.component.scss
@@ -7,6 +7,7 @@
 
 .header {
   position: relative;
+  overflow: hidden;
   height: 100vh;
   @include linear-gradient-background($white, $linear-color);  width: 100%;
   &-btn-box {
